--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@primer/css": "^13.2.0",
     "core-js": "^3.4.3",
+    "firebase": "^7.5.0",
     "vue": "^2.6.10",
     "vue-router": "^3.1.3",
     "vuex": "^3.1.2"
