--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@primer/css": "^14.0.0",
+    "copy-to-clipboard": "^3.2.0",
     "core-js": "^3.4.3",
     "firebase": "^7.5.0",
     "vue": "^2.6.10",
