--- a/.env.development-firebase
+++ b/.env.development-firebase
@@ -1,4 +1,4 @@
-NODE_ENV=development
+NODE_ENV=production
 VUE_APP_URL=https://dev.lgtm.us
 VUE_APP_FB_API_KEY=AIzaSyDN1gtbmdRioqBumUBICls4fVUmrLNAcSc
 VUE_APP_FB_AUTH_DOMAIN=lgtm-dev.firebaseapp.com
