--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "copy-to-clipboard": "^3.2.0",
     "core-js": "^3.4.3",
     "firebase": "^7.5.0",
+    "uuid": "^3.3.3",
     "vue": "^2.6.10",
     "vue-router": "^3.1.3",
+    "vue2-dropzone": "^3.6.0",
     "vuex": "^3.1.2"
   },
   "devDependencies": {
