--- a/.env.development
+++ b/.env.development
@@ -1,7 +1,7 @@
 NODE_ENV=development
 VUE_APP_URL=https://dev.lgtm.us
 VUE_APP_FB_API_KEY=AIzaSyDN1gtbmdRioqBumUBICls4fVUmrLNAcSc
-VUE_APP_FB_AUTH_DOMAIN=lgtm-dev.firebaseapp.com
+VUE_APP_FB_AUTH_DOMAIN=dev.lgtm.us
 VUE_APP_FB_DATABASE_URL=https://lgtm-dev.firebaseio.com
 VUE_APP_FB_PROJECT_ID=lgtm-dev
 VUE_APP_FB_STORAGE_BUCKET=lgtm-dev.appspot.com
