--- a/.env.production
+++ b/.env.production
@@ -1,7 +1,7 @@
 NODE_ENV=production
 VUE_APP_URL=https://lgtm.us
 VUE_APP_FB_API_KEY=AIzaSyCMPheXQKmmk9cfTvDGe0I7p3IcuRpJ4C0
-VUE_APP_FB_AUTH_DOMAIN=lgtm-prod.firebaseapp.com
+VUE_APP_FB_AUTH_DOMAIN=lgtm.us
 VUE_APP_FB_DATABASE_URL=https://lgtm-prod.firebaseio.com
 VUE_APP_FB_PROJECT_ID=lgtm-prod
 VUE_APP_FB_STORAGE_BUCKET=lgtm-prod.appspot.com
