--- a/.env.development-firebase
+++ b/.env.development-firebase
@@ -1,4 +1,5 @@
 NODE_ENV=production
+VUE_APP_STAGE=development-firebase
 VUE_APP_URL=https://dev.lgtm.us
 VUE_APP_FB_API_KEY=AIzaSyDN1gtbmdRioqBumUBICls4fVUmrLNAcSc
 VUE_APP_FB_AUTH_DOMAIN=dev.lgtm.us
