--- a/.env.development
+++ b/.env.development
@@ -1,4 +1,5 @@
 NODE_ENV=development
+VUE_APP_STAGE=local
 VUE_APP_URL=https://dev.lgtm.us
 VUE_APP_FB_API_KEY=AIzaSyDN1gtbmdRioqBumUBICls4fVUmrLNAcSc
 VUE_APP_FB_AUTH_DOMAIN=dev.lgtm.us
