--- a/.env.production
+++ b/.env.production
@@ -1,4 +1,5 @@
 NODE_ENV=production
+VUE_APP_STAGE=production
 VUE_APP_URL=https://lgtm.us
 VUE_APP_FB_API_KEY=AIzaSyCMPheXQKmmk9cfTvDGe0I7p3IcuRpJ4C0
 VUE_APP_FB_AUTH_DOMAIN=lgtm.us
@@ -6,3 +7,4 @@ VUE_APP_FB_DATABASE_URL=https://lgtm-prod.firebaseio.com
 VUE_APP_FB_PROJECT_ID=lgtm-prod
 VUE_APP_FB_STORAGE_BUCKET=lgtm-prod.appspot.com
 VUE_APP_FB_APP_ID=1:1068878238183:web:503f44dd51bd7eaebd6d42
+VUE_APP_GTM_ID=GTM-T7PDP78
