--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "firebase": "^7.5.0",
     "uuid": "^3.3.3",
     "vue": "^2.6.10",
+    "vue-gtm": "^2.2.0",
     "vue-router": "^3.1.3",
     "vue2-dropzone": "^3.6.0",
     "vuex": "^3.1.2"
