--- a/package.json
+++ b/package.json
@@ -12,10 +12,13 @@
     "@primer/css": "^14.0.0",
     "copy-to-clipboard": "^3.2.0",
     "core-js": "^3.4.3",
+    "file-saver": "^2.0.2",
     "firebase": "^7.5.0",
+    "konva": "^4.0.18",
     "uuid": "^3.3.3",
     "vue": "^2.6.10",
     "vue-gtm": "^2.2.0",
+    "vue-konva": "^2.1.1",
     "vue-router": "^3.1.3",
     "vue2-dropzone": "^3.6.0",
     "vuex": "^3.1.2"
