--- a/package.json
+++ b/package.json
@@ -15,26 +15,27 @@
     "file-saver": "^2.0.5",
     "firebase": "^8.3.2",
     "konva": "^4.0.18",
+    "save": "^2.4.0",
     "uuid": "^3.3.3",
     "vue": "^2.6.10",
     "vue-gtm": "^2.2.0",
     "vue-konva": "^2.1.1",
     "vue-router": "^3.5.1",
     "vue2-dropzone": "^3.6.0",
-    "vuex": "^3.1.2"
+    "vuex": "^3.6.2"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "^4.5.12",
-    "@vue/cli-plugin-eslint": "^4.5.12",
-    "@vue/cli-service": "^4.5.12",
+    "@vue/cli-plugin-babel": "^5.0.0-beta.0",
+    "@vue/cli-plugin-eslint": "^5.0.0-beta.0",
+    "@vue/cli-service": "^5.0.0-beta.0",
     "@vue/eslint-config-prettier": "^6.0.0",
     "babel-eslint": "^10.0.3",
-    "eslint": "^5.16.0",
+    "eslint": "^7.22.0",
     "eslint-plugin-prettier": "^3.1.3",
     "eslint-plugin-vue": "^7.7.0",
-    "node-sass": "^4.14.1",
+    "node-sass": "^6.0.0",
     "prettier": "^1.19.1",
-    "sass-loader": "^8.0.0",
+    "sass-loader": "^10.2.0",
     "vue-template-compiler": "^2.6.10"
   }
 }
